Fix custom select opening dir on mobile

--- a/src/assets/styles/cmps/_custom-select.scss
+++ b/src/assets/styles/cmps/_custom-select.scss
@@ -55,6 +55,11 @@
         margin-top: 5px;
         padding: 4px 6px;
 
+        &.open-up {
+            bottom: 100%;
+            top: unset;
+        }
+
         .option {
             border-radius: $border-radius-small;
             padding: 7px 0px 7px 14px;
